@@ -1,3 +1,13 @@
+2002-01-28  Pavel Roskin  <proski@gnu.org>
+
+	* tulip_core.c (tulip_init_one): Use tp->eeprom instead of
+	allocating a buffer for EEPROM copy on the stack.
+
+	* tulip_core.c: Add support for Conexant RS7112 (a.k.a. CN7112)
+	chip.
+	* tulip.h: Likewise.  Increase EEPROM_SIZE to 512 bytes to
+	accomodate EEPROM on Conexant RS7112.
+
 2002-02-07  Uwe Bonnes  <bon@elektron.ikp.physik.tu-darmstadt.de>
 
         * tulip_core (tulip_pci_tbl[]):
